--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-SECRET_KEY=suryaganteng
+SECRET_KEY=nasipadang
+PATH_FILE=http://localhost:5000/uploads/
+SERVER_KEY=SB-Mid-server-N3k566CL8EHrzygrPtg1zzSn
+CLIENT_KEY=SB-Mid-client-JI0vdgpQT7bjuZt-
+EMAIL_SYSTEM=muthmainnah133@gmail.com
+PASSWORD_SYSTEM=pwlwqbszytgpjuenv
